--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -37,7 +37,7 @@ Arch = ' '
 home_symbol = " "
 style = "fg:#859900"
 format = "[─](fg:#839495)[ $path ]($style)"
-truncation_symbol = ' '
+truncation_symbol = ' /'
 truncation_length = 3
 read_only = '󱧵 '
 read_only_style = ''
